# C_primer_game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.h  main  main.c  main.cpp  main.h  partone.cpp
ccc/ccc/: main.c  variable.c
ccc/ccc.xcodeproj/: project.pbxproj
ccc/ccc.xcodeproj/project.xcworkspace/xcshareddata/: ccc.xcscmblueprint
ccc/ccc.xcodeproj/project.xcworkspace/xcuserdata/hui.xcuserdatad/: UserInterfaceState.xcuserstate
ccc/ccc.xcodeproj/xcuserdata/hui.xcuserdatad/xcschemes/: ccc.xcscheme  xcschememanagement.plist
headers/: Num.h
libs/: cpu-info.h  get-put.c  gnumber.h  hw.h  ipo.h
